Bug 348138 - "Forget about all documents" is in wrong context menu
Summary: "Forget about all documents" is in wrong context menu
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Menu (Kicker) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-05-23 12:37 UTC by Szczepan Hołyszewski
Modified: 2015-05-24 19:34 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Szczepan Hołyszewski 2015-05-23 12:37:49 UTC
The "Forget about all documents" command should be in the context menu that shows when right clicking the "Recent documents" label itsef, **not** (or in addition to) the context menu that shows when right clicking an **item** in the Recent documents submenu.

Current location of the command makes it impossible to discreetly clear the list without showing its contents to the person sitting next to you.

Reproducible: Always
Comment 1 Eike Hein 2015-05-23 13:02:42 UTC
Excellent point. Will fix soon-ish.
Comment 2 Eike Hein 2015-05-24 19:34:29 UTC
Git commit ca4958c3cb13feb8ae6050a7650dbde381c273bd by Eike Hein.
Committed on 24/05/2015 at 19:33.
Pushed by hein into branch 'master'.

Make the Forget All actions available in the root menu.

M  +1    -2    applets/kicker/package/contents/ui/ItemListView.qml
M  +6    -0    applets/kicker/plugin/abstractmodel.cpp
M  +2    -0    applets/kicker/plugin/abstractmodel.h
M  +15   -6    applets/kicker/plugin/recentappsmodel.cpp
M  +2    -0    applets/kicker/plugin/recentappsmodel.h
M  +15   -6    applets/kicker/plugin/recentcontactsmodel.cpp
M  +2    -0    applets/kicker/plugin/recentcontactsmodel.h
M  +22   -11   applets/kicker/plugin/recentdocsmodel.cpp
M  +2    -0    applets/kicker/plugin/recentdocsmodel.h
M  +13   -5    applets/kicker/plugin/rootmodel.cpp

http://commits.kde.org/plasma-desktop/ca4958c3cb13feb8ae6050a7650dbde381c273bd