Make the Forget All actions available in the root menu.

BUG:348138