applets/kicker/plugin/recentappsmodel.h
@@ -34,6 +34,8 @@ class RecentAppsModel : public ForwardingModel
 
         Q_INVOKABLE bool trigger(int row, const QString &actionId, const QVariant &argument);
 
+        QVariantList actions() const;
+
     private Q_SLOTS:
         void refresh();
 };
