applets/kicker/plugin/recentcontactsmodel.h
@@ -39,6 +39,8 @@ class RecentContactsModel : public ForwardingModel
 
         Q_INVOKABLE bool trigger(int row, const QString &actionId, const QVariant &argument);
 
+        QVariantList actions() const;
+
     private Q_SLOTS:
         void refresh();
         void buildCache();
